add: initiatilize result module

--- a/src/Views/Student/index.cshtml
+++ b/src/Views/Student/index.cshtml
@@ -111,6 +111,13 @@
                         </li>
 
                         <!-- Log Out -->
+                        @* <li class="flex"> *@
+                        @*     <div class="iconSz24"> *@
+                        @*         <img src="~/ASSETS/logout.png" alt="Logout icon"> *@
+                        @*     </div> *@
+                        @*     <a class="blueTxt capitalize" asp-controller="Account" asp-action="Logout">log out</a> *@
+                        @* </li> *@
+
                         <li class="flex">
                             <div class="iconSz24">
                                 <img src="~/ASSETS/logout.png" alt="Logout icon">
