--- a/src/Views/Shared/_Layout.cshtml
+++ b/src/Views/Shared/_Layout.cshtml
@@ -3,38 +3,85 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - src</title>
+    <title>@ViewData["Title"] - Yeshuwa</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/src.styles.css" asp-append-version="true" />
+  @*   <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" /> *@
+  @*   <link rel="stylesheet" href="~/src.styles.css" asp-append-version="true" /> *@
+    <link rel="stylesheet" href="~/CustomCss/index.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">src</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+    <div class="dashboardMainContainer flex">
+        <div class="menuPanel">
+            <div class="menuPanelContent">
+                <div class="profile">
+                    <div class="profilePhoto">
+                        <img src="~/ASSETS/profile.png" alt="">
+                    </div>
+                    <p class="blueTxt">20GHUJ099</p>
+                </div>
+
+                <div class="menuItems">
+                    <ul class="menu flex column">
+                        <li class="flex"><div class="iconSz24"><img src="~/ASSETS/Category.png" alt="icon"></div><a class="blueTxt capitalize" asp-controller="Dashboard" asp-action="Index">dashboard</a></li>
+                        <li class="flex"><div class="iconSz24"><img src="~/ASSETS/user.png" alt="icon"></div><a class="blueTxt capitalize" href="#">profile</a></li>
+                        <li class="flex"><div class="iconSz24"><img src="~/ASSETS/announcement.png" alt="icon"></div><a class="blueTxt capitalize" href="#">announcements</a></li>
+                        <li class="flex"><div class="iconSz24"><img src="~/ASSETS/courseReg.png" alt="icon"></div><a class="blueTxt capitalize" href="#">course registration</a></li>
+                        <li class="flex"><div class="iconSz24"><img src="~/ASSETS/calendar.png" alt="icon"></div><a class="blueTxt capitalize" href="#">view results</a></li>
+                        <li class="flex highlight"><div class="iconSz24"><img src="~/ASSETS/note-text.png" alt="icon"></div><a class="blueTxt capitalize" asp-action="GenerateInvoice" asp-controller="Dashboard">pay fees</a></li>
+                        <li class="flex"><div class="iconSz24"><img src="~/ASSETS/calendar.png" alt="icon"></div><a class="blueTxt capitalize" href="#">transfer form</a></li>
+                        <li class="flex"><div class="iconSz24"><img src="~/ASSETS/note-text.png" alt="icon"></div><a class="blueTxt capitalize" href="#">siwes placement</a></li>
+                        <li class="flex"><div class="iconSz24"><img src="~/ASSETS/note-text.png" alt="icon"></div><a class="blueTxt capitalize" href="#">submit complaint</a></li>
+                        <li class="flex"><div class="iconSz24"><img src="~/ASSETS/note-text.png" alt="icon"></div><a class="blueTxt capitalize" href="#">lecturer review</a></li>
+                        <li class="flex"><div class="iconSz24"><img src="~/ASSETS/logout.png" alt="icon"></div><a class="blueTxt capitalize" href="#">log out</a></li>
                     </ul>
                 </div>
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+        </div>
+
+        <div class="dashboard">
+            <div class="panel flex">
+                <div class="schoolNameLogo flex center">
+                    <div class="logo">
+                        <img src="~/ASSETS/logo.png" alt="">
+                    </div>
+                    <h1 class="blueTxt capitalize">university of yeshua</h1>
+                </div>
+
+                <div class="panelIcons flex center">
+                    <div class="notificationIcon iconSz36"><img src="~/ASSETS/notifications.png" alt="icon"></div>
+                    <div class="settingsIcon iconSz36"><img src="~/ASSETS/settings.png" alt="icon"></div>
+                </div>
+            </div>
+
+            <div class="overviewPanel">
+                <div class="navigation flex">
+                    <div class="navigationName flex">
+                        <h6 class="capitalize lgtBlueTxt">dashboard</h6>
+                        <div class="arrowIcon"><img src="~/ASSETS/arrow.png" alt="icon"></div>
+                        <h6 class="capitalize whtTxt">overview</h6>
+                    </div>
+
+                    <div class="course">
+                        <h6 class="capitalize whtTxt">Programme: <span>B.Sc Communication And Information Science</span></h6>
+                    </div>
+                </div>
+
+                <div class="userOverview">
+                    <div class="userDetails flex center">
+                        <h1 class="capitalize whtTxt">Welcome, Makkiya Dunnis Samuel</h1>
+                        <div class="lastVisited">
+                            <h6 class="capitalize whtTxt">@DateTime.Now.ToString("ddd MMM dd yyyy")</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <main role="main" class="pb-3">
+                    @RenderBody()
+                </main>
+            </div>
+        </div>
     </div>
 
     <footer class="border-top footer text-muted">
