--- a/src/Views/Payment/Index.cshtml
+++ b/src/Views/Payment/Index.cshtml
@@ -17,6 +17,6 @@
             </select>
         </div>
 
-        <button class="btn blueBtn submitCourseReg flex">generate fees</button>
+        <a asp-controller="Payment" asp-action="FeesBreakdown" class="btn blueBtn submitCourseReg flex">generate fees</a>
     </div>
 </div>
